--- a/package.json
+++ b/package.json
@@ -18,21 +18,25 @@
   },
   "homepage": "https://github.com/njoel24/nations#readme",
   "dependencies": {
+    "@types/async": "^2.0.45",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.13",
     "@types/redux": "^3.6.31",
+    "@types/redux-thunk": "^2.1.0",
+    "apollo-client-preset": "^1.0.3",
+    "apollo-fetch": "^0.6.0",
+    "d3": "^4.11.0",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.4.0",
-    "d3": "^4.11.0",
-    "graphql": "^0.11.7",
-    "jest": "^21.2.1",
-    "mongodb": "^2.2.33",
     "source-map-loader": "^0.2.3",
     "typescript": "^2.6.1",
     "webpack": "^3.8.1",
