--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@types/redux-thunk": "^2.1.0",
     "apollo-client-preset": "^1.0.3",
     "apollo-fetch": "^0.6.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "d3": "^4.11.0",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
@@ -33,7 +36,8 @@
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "ts-loader": "^3.2.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.4.0",
