--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/njoel24/nations#readme",
   "dependencies": {
     "@types/async": "^2.0.45",
+    "@types/d3": "^4.12.0",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.13",
@@ -26,6 +27,7 @@
     "@types/redux-thunk": "^2.1.0",
     "apollo-client-preset": "^1.0.3",
     "apollo-fetch": "^0.6.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -33,7 +35,7 @@
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
